Update tmux.conf with split-pane bindings
Remove cruft from bashrc
Add "cd" directory correction feature to bashrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,1 +1,5 @@
-set -g default-terminal "xterm-color"
+set -g default-terminal "screen-256color"
+setw -g mode-keys vi
+
+bind | split-window -h
+bind - split-window -v
