Add new commands to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,39 @@
-set -g default-terminal "screen-256color"
-setw -g mode-keys vi
+# Convenient way to reload config file.
+bind-key r source-file ~/.tmux.conf
 
+# Set terminal to use 256 colors.
+set -g default-terminal "screen-256color"
+
+# Use Vi mode.
+setw -g mode-keys vi
+set-option -g status-keys vi
+
+# Set the clock mode style to 12-hr format.
+set-option -g clock-mode-style 12
+
+# Bind commands for window splitting.
 bind | split-window -h
 bind - split-window -v
+bind h select-layout even-horizontal
+bind v select-layout even-vertical
+bind T select-layout tiled
+
+# Mouse support (must be supported by terminal app).
+setw -g mode-mouse on
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-option -g mouse-resize-pane on
+
+# Customise status bar.
+set-option -g status-bg colour238
+set-option -g status-fg colour255
+set-window-option -g window-status-current-bg yellow
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-format ' #I #W '
+set-window-option -g window-status-current-format ' #I #W '
+
+# Customise pane border colours.
+set-option -g pane-active-border-fg yellow
+set-option -g pane-active-border-bg default
+set-option -g pane-border-fg colour238
+set-option -g pane-border-bg default
