--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 bind-key r source-file ~/.tmux.conf
 
 # Set terminal to use 256 colors.
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # Use Vi mode.
 setw -g mode-keys vi
@@ -37,3 +37,8 @@ set-option -g pane-active-border-fg yellow
 set-option -g pane-active-border-bg default
 set-option -g pane-border-fg colour238
 set-option -g pane-border-bg default
+
+# Allows scrolling history and keeps line placement.
+set-window-option -g alternate-screen on
+set -g terminal-overrides "xterm*:smcup@:rmcup@"
+
