Change tmux mouse-mode to copy-mode in tmux.conf
Disable mouse pane resizing in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,10 +19,9 @@ bind v select-layout even-vertical
 bind T select-layout tiled
 
 # Mouse support (must be supported by terminal app).
-setw -g mode-mouse on
+setw -g mode-mouse copy-mode
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
-set-option -g mouse-resize-pane on
 
 # Customise status bar.
 set-option -g status-bg colour238
