Add new tmux configuration options
Add tmux bindings for pane resizing.
Add new bash aliases for additional tmux commands.

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,13 +10,21 @@ set-option -g status-keys vi
 
 # Set the clock mode style to 12-hr format.
 set-option -g clock-mode-style 12
+bind T clock-mode
+unbind t
 
 # Bind commands for window splitting.
 bind | split-window -h
 bind - split-window -v
 bind h select-layout even-horizontal
 bind v select-layout even-vertical
-bind T select-layout tiled
+bind t select-layout tiled
+
+# Bind commands for pane resizing.
+bind + resize-pane -U 5
+bind _ resize-pane -D 5
+bind ( resize-pane -L 5
+bind ) resize-pane -R 5
 
 # Mouse support (must be supported by terminal app).
 setw -g mode-mouse copy-mode
