Fix RVM check and update tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,9 @@ unbind t
 bind | split-window -h
 bind - split-window -v
 bind h select-layout even-horizontal
+bind H select-layout main-horizontal
 bind v select-layout even-vertical
+bind V select-layout main-vertical
 bind t select-layout tiled
 
 # Bind commands for pane resizing.
