Modify tmux.conf and gvimrc
Update gvimrc to make solarized the default colorscheme.
Update the tmux configuration to change status bar text.
Update the tmux configurationt to create "default" session if no
sessions exist.

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,6 +34,7 @@ set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 
 # Customise status bar.
+set-option -g status-right '"#(id -un)@#(hostname)"'
 set-option -g status-bg colour238
 set-option -g status-fg colour255
 set-window-option -g window-status-current-bg yellow
@@ -51,3 +52,4 @@ set-option -g pane-border-bg default
 set-window-option -g alternate-screen on
 set -g terminal-overrides "xterm*:smcup@:rmcup@"
 
+new-session -s default
