--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,7 @@ bind ( resize-pane -L 5
 bind ) resize-pane -R 5
 
 # Mouse support (must be supported by terminal app).
-setw -g mode-mouse copy-mode
+setw -g mode-mouse on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 
