--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,32 @@
 [submodule "vim/bundle/vim-git"]
 	path = vim/bundle/vim-git
-	url = git://github.com/tpope/vim-git.git
+   url = git://github.com/tpope/vim-git.git
+   ignore = untracked
 [submodule "vim/bundle/vim-markdown"]
 	path = vim/bundle/vim-markdown
 	url = git://github.com/tpope/vim-markdown.git
+   ignore = untracked
 [submodule "vim/bundle/vim-nerdtree"]
 	path = vim/bundle/vim-nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
+   ignore = untracked
 [submodule "vim/bundle/vim-peepopen"]
 	path = vim/bundle/vim-peepopen
 	url = git://github.com/topfunky/PeepOpen-EditorSupport.git
+   ignore = untracked
 [submodule "vim/bundle/vim-taglist"]
 	path = vim/bundle/vim-taglist
 	url = git://github.com/vim-scripts/taglist.vim.git
+   ignore = untracked
 [submodule "vim/bundle/vim-syntastic"]
 	path = vim/bundle/vim-syntastic
 	url = git://github.com/chazlever/syntastic.git
+   ignore = untracked
 [submodule "vim/bundle/vim-pathogen"]
 	path = vim/bundle/vim-pathogen
 	url = git://github.com/tpope/vim-pathogen.git
+   ignore = untracked
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = git://github.com/robbyrussell/oh-my-zsh.git
+   ignore = untracked
