--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 bind-key r source-file ~/.tmux.conf
 
 # Set terminal to use 256 colors.
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # Use Vi mode.
 setw -g mode-keys vi
@@ -34,20 +34,26 @@ set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 
 # Customise status bar.
-set-option -g status-right '"#(id -un)@#(hostname)"'
-set-option -g status-bg colour238
-set-option -g status-fg colour255
-set-window-option -g window-status-current-bg yellow
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-format ' #I #W '
-set-window-option -g window-status-current-format ' #I #W '
+set-option -g status-utf8 on
+set-option -g status-fg white
+set-option -g status-bg colour8
+set-option -g status-right-length 60
+set-option -g status-left-length 60
+set-option -g status-left '#[fg=white, bg=red] ☰  #S #[default]'
+set-option -g status-right '#[fg=red, bg=white, bold] #(whoami) ⿻ #H #[default]'
+set-window-option -g window-status-current-bg colour11
+set-window-option -g window-status-current-fg colour8
+set-window-option -g window-status-format ' (#I) #W  ⠿'
+set-window-option -g window-status-current-format ' (#I) #W #[fg=white, bg=colour8] ⠿'
+set-window-option -g window-status-current-attr bold
 
 # Customise pane border colours.
 set-option -g pane-active-border-fg yellow
 set-option -g pane-active-border-bg default
-set-option -g pane-border-fg colour238
+set-option -g pane-border-fg colour8
 set-option -g pane-border-bg default
 
 # Allows scrolling history and keeps line placement.
 set-window-option -g alternate-screen on
+set -g history-limit 4096
 set -g terminal-overrides "xterm*:smcup@:rmcup@"
