--- a/tmux.conf
+++ b/tmux.conf
@@ -39,12 +39,12 @@ set-option -g status-fg white
 set-option -g status-bg colour8
 set-option -g status-right-length 60
 set-option -g status-left-length 60
-set-option -g status-left '#[fg=white, bg=red] ☰  #S #[default]'
-set-option -g status-right '#[fg=red, bg=white, bold] #(whoami) ⿻ #H #[default]'
+set-option -g status-left '#[fg=colour160, bg=white, bold] ☰  #S #[default]'
+set-option -g status-right '#[fg=colour160, bg=white, bold] #(whoami) ⿻ #H #[default]'
 set-window-option -g window-status-current-bg colour11
 set-window-option -g window-status-current-fg colour8
 set-window-option -g window-status-format ' (#I) #W  ⠿'
-set-window-option -g window-status-current-format ' (#I) #W #[fg=white, bg=colour8] ⠿'
+set-window-option -g window-status-current-format '#[fg=colour8] (#I) #W #[fg=white, bg=colour8] ⠿#[default]'
 set-window-option -g window-status-current-attr bold
 
 # Customise pane border colours.
