Update tmux.conf with minor change to status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ set-option -g status-fg white
 set-option -g status-bg colour8
 set-option -g status-right-length 60
 set-option -g status-left-length 60
-set-option -g status-left '#[fg=colour160, bg=white, bold] ☰  #S #[default]'
+set-option -g status-left '#[fg=colour160, bg=white, bold] ☰  #S #[fg=white, bg=colour8] ⠿#[default]'
 set-option -g status-right '#[fg=colour160, bg=white, bold] #(whoami) ⿻ #H #[default]'
 set-window-option -g window-status-current-bg colour11
 set-window-option -g window-status-current-fg colour8
