Add prezto to dotfiles as submodule
Oops! Forgot to add this in the previous commit!

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 	path = vim/bundle/vim-pathogen
 	url = git://github.com/tpope/vim-pathogen.git
    ignore = untracked
+[submodule "zprezto"]
+	path = zprezto
+	url = https://github.com/sorin-ionescu/prezto.git
