Add new -c option to bindings for new win/panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,8 +14,9 @@ bind T clock-mode
 unbind t
 
 # Bind commands for window splitting.
-bind | split-window -h
-bind - split-window -v
+bind c new-window -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 bind h select-layout even-horizontal
 bind H select-layout main-horizontal
 bind v select-layout even-vertical
