--- a/tmux.conf
+++ b/tmux.conf
@@ -29,10 +29,18 @@ bind _ resize-pane -D 5
 bind ( resize-pane -L 5
 bind ) resize-pane -R 5
 
-# Mouse support (must be supported by terminal app).
-setw -g mode-mouse on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
+# Mouse support (must be supported by terminal app) changed in tmux 2.1.
+# URL: https://www.reddit.com/r/tmux/comments/3paqoi/tmux_21_has_been_released/cw552qd
+set-option -g -q mouse on
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind-key -t vi-copy WheelUpPane halfpage-up
+bind-key -t vi-copy WheelDownPane halfpage-down
+
+# Enable copy mode using PgUp/PgDown
+bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
+bind-key -t vi-copy PPage page-up
+bind-key -t vi-copy NPage page-down
 
 # Customise status bar.
 set-option -g status-utf8 on
