--- a/tmux.conf
+++ b/tmux.conf
@@ -66,3 +66,15 @@ set-option -g pane-border-bg default
 set-window-option -g alternate-screen on
 set -g history-limit 4096
 set -g terminal-overrides "xterm*:smcup@:rmcup@"
+
+# Smart pane switching with awareness of vim splits
+# url: https://robots.thoughtbot.com/seamlessly-navigate-vim-and-tmux-splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+# Restore clear screen binding
+# url: https://github.com/christoomey/vim-tmux-navigator
+bind C-l send-keys 'C-l'
