--- a/tmux.conf
+++ b/tmux.conf
@@ -77,4 +77,4 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 
 # Restore clear screen binding
 # url: https://github.com/christoomey/vim-tmux-navigator
-bind C-l send-keys 'C-l'
+bind l send-keys 'C-l'
