Add binding to send Ctrl-K in tmux session

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,3 +78,4 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 # Restore clear screen binding
 # url: https://github.com/christoomey/vim-tmux-navigator
 bind l send-keys 'C-l'
+bind k send-keys 'C-k'
