Change color scheme to solarized
Change default vim colorsche to solarized and make tmux configuration
work with iTerm solarized theme.

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,21 +45,21 @@ bind-key -t vi-copy NPage page-down
 # Customise status bar.
 set-option -g status-utf8 on
 set-option -g status-fg white
-set-option -g status-bg colour8
+set-option -g status-bg colour244
 set-option -g status-right-length 60
 set-option -g status-left-length 60
-set-option -g status-left '#[fg=colour160, bg=white, bold] ☰  #S #[fg=white, bg=colour8] ⠿#[default]'
-set-option -g status-right '#[fg=colour160, bg=white, bold] #(whoami) ⿻ #H #[default]'
-set-window-option -g window-status-current-bg colour11
-set-window-option -g window-status-current-fg colour8
+set-option -g status-left '#[fg=colour160, bg=white, bold] ☰  #S #[fg=white, bg=colour244] ⠿#[default] '
+set-option -g status-right '#[fg=colour160, bg=white, bold] #(whoami) @ #H #[default]'
+set-window-option -g window-status-current-bg colour160
+set-window-option -g window-status-current-fg white
 set-window-option -g window-status-format ' (#I) #W  ⠿'
-set-window-option -g window-status-current-format '#[fg=colour8] (#I) #W #[fg=white, bg=colour8] ⠿#[default]'
+set-window-option -g window-status-current-format '#[fg=white] (#I) #W #[fg=white, bg=colour244] ⠿#[default]'
 set-window-option -g window-status-current-attr bold
 
 # Customise pane border colours.
 set-option -g pane-active-border-fg yellow
 set-option -g pane-active-border-bg default
-set-option -g pane-border-fg colour8
+set-option -g pane-border-fg colour244
 set-option -g pane-border-bg default
 
 # Allows scrolling history and keeps line placement.
