Update vim configuration with new functionality
This commit changes the linter plugin for vim from Syntastic to ALE.  It
also adds the vimtex and necomplete plugins for better handling of LaTeX
documents. It also officially adds vim-go to the official list of
plugins.

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,10 +14,6 @@
 	path = vim/bundle/vim-taglist
 	url = git://github.com/vim-scripts/taglist.vim.git
    ignore = untracked
-[submodule "vim/bundle/vim-syntastic"]
-	path = vim/bundle/vim-syntastic
-	url = git://github.com/scrooloose/syntastic.git
-   ignore = untracked
 [submodule "vim/bundle/vim-pathogen"]
 	path = vim/bundle/vim-pathogen
 	url = git://github.com/tpope/vim-pathogen.git
@@ -46,3 +42,15 @@
 [submodule "dircolors-solarized"]
 	path = dircolors-solarized
 	url = https://github.com/seebi/dircolors-solarized.git
+[submodule "vim/bundle/ale"]
+	path = vim/bundle/ale
+	url = https://github.com/w0rp/ale.git
+[submodule "vim/bundle/neocomplete.vim"]
+	path = vim/bundle/neocomplete.vim
+	url = https://github.com/Shougo/neocomplete.vim.git
+[submodule "vim/bundle/vim-go"]
+	path = vim/bundle/vim-go
+	url = https://github.com/fatih/vim-go.git
+[submodule "vim/bundle/vimtex"]
+	path = vim/bundle/vimtex
+	url = https://github.com/lervag/vimtex.git
