Add additional mouse support options for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,6 +32,9 @@ bind ) resize-pane -R 5
 # Mouse support (must be supported by terminal app) changed in tmux 2.4
 # URL: https://github.com/tmux/tmux/blob/2.4/CHANGES
 set-option -g -q mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 bind-key -T copy-mode-vi WheelUpPane send -X halfpage-up
