Add conditional support for mouse mode in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,12 +29,24 @@ bind _ resize-pane -D 5
 bind ( resize-pane -L 5
 bind ) resize-pane -R 5
 
-# Mouse support (must be supported by terminal app) changed in tmux 2.4
-# URL: https://github.com/tmux/tmux/blob/2.4/CHANGES
-set-option -g -q mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# Version-specific commands [grumble, grumble]
+# See: https://github.com/tmux/tmux/blob/master/CHANGES
+# url: https://stackoverflow.com/a/40902312
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+
+# UTF8 is autodetected in 2.2 onwards, but errors if explicitly set
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
+  "set -g utf8 on; set -g status-utf8 on; set -g mouse-utf8 on"
+
+# Legacy support for mouse mode
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
+  "set -g mouse-select-pane on; set -g mode-mouse on; \
+    set -g mouse-resize-pane on; set -g mouse-select-window on"
+
+# In version 2.1 "mouse" replaced the previous 4 mouse options
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' \
+  "set -g mouse on"
+
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 bind-key -T copy-mode-vi WheelUpPane send -X halfpage-up
