--- a/tmux.conf
+++ b/tmux.conf
@@ -59,15 +59,15 @@ bind-key -T copy-mode-vi NPage send -X page-down
 
 # Customise status bar.
 set-option -g status-fg white
-set-option -g status-bg colour244
+set-option -g status-bg colour243
 set-option -g status-right-length 60
 set-option -g status-left-length 60
-set-option -g status-left '#[fg=colour160, bg=white, bold] ☰  #S #[fg=white, bg=colour244] ⠿#[default] '
-set-option -g status-right '#[fg=colour160, bg=white, bold] #(whoami) @ #H #[default]'
-set-window-option -g window-status-current-bg colour160
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-format ' (#I) #W  ⠿'
-set-window-option -g window-status-current-format '#[fg=white] (#I) #W #[fg=white, bg=colour244] ⠿#[default]'
+set-option -g status-left '#[fg=colour241, bg=colour250, bold] ☰ #S #[default] '
+set-option -g status-right '#[fg=colour241, bg=colour250, bold] #(whoami) @ #H #[default]'
+set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-format '#[fg=white, bg=colour239] #I: #W #[fg=white, bg=colour239]'
+set-window-option -g window-status-current-format '#[fg=white, bg=colour234] #I: #W #[fg=white, bg=colour234]'
 set-window-option -g window-status-current-attr bold
 
 # Customise pane border colours.
