--- a/.gitmodules
+++ b/.gitmodules
@@ -54,3 +54,18 @@
 [submodule "vim/bundle/deoplete.nvim"]
 	path = vim/pack/bundle/start/deoplete.nvim
 	url = https://github.com/Shougo/deoplete.nvim.git
+[submodule "vim/pack/bundle/start/vim-rhubarb"]
+	path = vim/pack/bundle/start/vim-rhubarb
+	url = https://github.com/tpope/vim-rhubarb
+[submodule "vim/pack/bundle/start/vim-unimpaired"]
+	path = vim/pack/bundle/start/vim-unimpaired
+	url = https://github.com/tpope/vim-unimpaired
+[submodule "vim/pack/bundle/start/vim-eunuch"]
+	path = vim/pack/bundle/start/vim-eunuch
+	url = https://github.com/tpope/vim-eunuch
+[submodule "vim/pack/bundle/start/vim-sensible"]
+	path = vim/pack/bundle/start/vim-sensible
+	url = https://github.com/tpope/vim-sensible.git
+[submodule "vim/pack/bundle/start/QFGrep"]
+	path = vim/pack/bundle/start/QFGrep
+	url = https://github.com/sk1418/QFGrep
