--- a/tmux.conf
+++ b/tmux.conf
@@ -64,17 +64,13 @@ set-option -g status-right-length 60
 set-option -g status-left-length 60
 set-option -g status-left '#[fg=colour241, bg=colour250, bold] ☰ #S #[default] '
 set-option -g status-right '#[fg=colour241, bg=colour250, bold] #(whoami) @ #H #[default]'
-set-window-option -g window-status-current-bg white
-set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-style bg=white,fg=black,bold
 set-window-option -g window-status-format '#[fg=white, bg=colour239] #I: #W #[fg=white, bg=colour239]'
 set-window-option -g window-status-current-format '#[fg=white, bg=colour234] #I: #W #[fg=white, bg=colour234]'
-set-window-option -g window-status-current-attr bold
 
 # Customise pane border colours.
-set-option -g pane-active-border-fg yellow
-set-option -g pane-active-border-bg default
-set-option -g pane-border-fg colour244
-set-option -g pane-border-bg default
+set-option -g pane-active-border-style fg=yellow,bg=default
+set-option -g pane-border-style fg=colour244,bg=default
 
 # Allows scrolling history and keeps line placement.
 set-window-option -g alternate-screen on
