Update tmux.conf support for older versions

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,20 +32,28 @@ bind ) resize-pane -R 5
 # Version-specific commands [grumble, grumble]
 # See: https://github.com/tmux/tmux/blob/master/CHANGES
 # url: https://stackoverflow.com/a/40902312
-run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+#run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c -8 | cut -d' ' -f2)"
+
 
 # UTF8 is autodetected in 2.2 onwards, but errors if explicitly set
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
   "set -g utf8 on; set -g status-utf8 on; set -g mouse-utf8 on"
 
 # Legacy support for mouse mode
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
-  "set -g mouse-select-pane on; set -g mode-mouse on; \
-    set -g mouse-resize-pane on; set -g mouse-select-window on"
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' "\
+   set -g mouse-select-pane on; \
+   set -g mode-mouse on; \
+   set -g mouse-resize-pane on; \
+   set -g mouse-select-window on"
 
 # In version 2.1 "mouse" replaced the previous 4 mouse options
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' \
-  "set -g mouse on"
+	"set -g mouse on"
+
+# UTF8 is autodetected in 2.2 onwards, but errors if explicitly set
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
+	"set -g utf8 on; set -g status-utf8 on; set -g mouse-utf8 on"
 
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
