--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "vim/bundle/vim-git"]
-	path = vim/pack/bundle/start/vim-git
-   url = git://github.com/tpope/vim-git.git
-   ignore = untracked
 [submodule "vim/bundle/vim-markdown"]
 	path = vim/pack/bundle/start/vim-markdown
 	url = git://github.com/tpope/vim-markdown.git
@@ -48,9 +44,6 @@
 [submodule "vim/bundle/vimtex"]
 	path = vim/pack/bundle/start/vimtex
 	url = https://github.com/lervag/vimtex.git
-[submodule "vim/bundle/gruvbox"]
-	path = vim/pack/bundle/start/gruvbox
-	url = https://github.com/morhetz/gruvbox.git
 [submodule "vim/bundle/deoplete.nvim"]
 	path = vim/pack/bundle/start/deoplete.nvim
 	url = https://github.com/Shougo/deoplete.nvim.git
@@ -69,3 +62,6 @@
 [submodule "vim/pack/bundle/start/QFGrep"]
 	path = vim/pack/bundle/start/QFGrep
 	url = https://github.com/sk1418/QFGrep
+[submodule "vim/pack/themes/start/dracula"]
+	path = vim/pack/themes/start/dracula
+	url = https://github.com/dracula/vim.git
