--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "vim/bundle/vim-markdown"]
 	path = vim/pack/bundle/start/vim-markdown
-	url = git://github.com/tpope/vim-markdown.git
+	url = https://github.com/tpope/vim-markdown.git
    ignore = untracked
 [submodule "vim/bundle/vim-nerdtree"]
 	path = vim/pack/bundle/start/vim-nerdtree
-	url = git://github.com/scrooloose/nerdtree.git
+	url = https://github.com/scrooloose/nerdtree.git
    ignore = untracked
 [submodule "vim/bundle/vim-taglist"]
 	path = vim/pack/bundle/start/vim-taglist
-	url = git://github.com/vim-scripts/taglist.vim.git
+	url = https://github.com/vim-scripts/taglist.vim.git
    ignore = untracked
 [submodule "vim/bundle/vim-pathogen"]
 	path = vim/pack/bundle/start/vim-pathogen
-	url = git://github.com/tpope/vim-pathogen.git
+	url = https://github.com/tpope/vim-pathogen.git
    ignore = untracked
 [submodule "zprezto"]
 	path = zprezto
@@ -65,3 +65,6 @@
 [submodule "vim/pack/themes/start/dracula"]
 	path = vim/pack/themes/start/dracula
 	url = https://github.com/dracula/vim.git
+[submodule "tmux/plugins/tpm"]
+	path = tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
