--- a/tmux.conf
+++ b/tmux.conf
@@ -32,9 +32,8 @@ bind ) resize-pane -R 5
 # Version-specific commands [grumble, grumble]
 # See: https://github.com/tmux/tmux/blob/master/CHANGES
 # url: https://stackoverflow.com/a/40902312
-#run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c -8 | cut -d' ' -f2)"
-
 
 # UTF8 is autodetected in 2.2 onwards, but errors if explicitly set
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
@@ -65,35 +64,27 @@ bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mod
 bind-key -T copy-mode-vi PPage send -X page-up
 bind-key -T copy-mode-vi NPage send -X page-down
 
-# Customise status bar.
-set-option -g status-fg white
-set-option -g status-bg colour243
-set-option -g status-right-length 60
-set-option -g status-left-length 60
-set-option -g status-left '#[fg=colour241, bg=colour250, bold] ☰ #S #[default] '
-set-option -g status-right '#[fg=colour241, bg=colour250, bold] #(whoami) @ #H #[default]'
-set-window-option -g window-status-current-style bg=white,fg=black,bold
-set-window-option -g window-status-format '#[fg=white, bg=colour239] #I: #W #[fg=white, bg=colour239]'
-set-window-option -g window-status-current-format '#[fg=white, bg=colour234] #I: #W #[fg=white, bg=colour234]'
-
-# Customise pane border colours.
-set-option -g pane-active-border-style fg=yellow,bg=default
-set-option -g pane-border-style fg=colour244,bg=default
-
 # Allows scrolling history and keeps line placement.
 set-window-option -g alternate-screen on
 set -g history-limit 4096
 set -g terminal-overrides "xterm*:smcup@:rmcup@"
 
-# Smart pane switching with awareness of vim splits
-# url: https://robots.thoughtbot.com/seamlessly-navigate-vim-and-tmux-splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n 'C-\' run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
-
 # Restore clear screen binding
 # url: https://github.com/christoomey/vim-tmux-navigator
 bind l send-keys 'C-l'
 bind k send-keys 'C-k'
+
+# Configure Dracula plugins
+# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, weather, time
+set -g @dracula-plugins "network cpu-usage ram-usage battery"
+set -g @dracula-show-left-icon "session"
+set -g @dracula-ram-usage-colors "light_purple dark_gray"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'dracula/tmux'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
